--- a/src/app/maps/pages/marker-page/marker-page.component.html
+++ b/src/app/maps/pages/marker-page/marker-page.component.html
@@ -1,1 +1,10 @@
-<p>marker-page works!</p>
+<div id=map #map></div>
+
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let colorMarker of markers; let i = index" (dblclick)="deleteMarker(i)"
+    (click)="flyTo(colorMarker.marker)" [ngStyle]="{backgroundColor:colorMarker.color}">
+    Market {{i + 1}}
+  </li>
+</ul>
+
+<button class="btn btn-primary" (click)="createMarket()"> + Agregar marcador</button>
