--- a/src/app/maps/pages/marker-page/marker-page.component.html
+++ b/src/app/maps/pages/marker-page/marker-page.component.html
@@ -7,4 +7,4 @@
   </li>
 </ul>
 
-<button class="btn btn-primary" (click)="createMarket()"> + Agregar marcador</button>
+<button class="btn btn-primary" (click)="createMarker()"> + Agregar marcador</button>
