--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -1,8 +1,7 @@
-<div class="row mt-3">
+<div class="row mt-3 me-5">
   <div class="col-2"></div>
-
   <div class="col">
-    <h3>Listado de Propiedades</h3>
+    <h3>Listado de propiedades</h3>
     <hr>
   </div>
 </div>
@@ -12,22 +11,28 @@
 
   <div class="col">
 
-    <div class="row">
+    <div class="row me-5">
 
-      <div class="col-4 mb-2" *ngFor="let house of houses">
+      <!-- Houses -->
+      <div *ngFor="let house of houses" class="col-4 mb-2">
 
         <div class="card">
-          <img src="" alt="" class="card-img-top">
+          <!-- <img src="..." class="card-img-top"> -->
           <map-mini-map [lngLat]="house.lngLat" />
 
           <div class="card-body">
-            <h5 class="card-title">{{house.title}}</h5>
-            <p class="card-text">{{house.description}}</p>
+            <h5 class="card-title">{{ house.title }}</h5>
+            <p class="card-text">{{ house.description }}</p>
           </div>
         </div>
 
       </div>
 
+
+
     </div>
+
+
+
   </div>
 </div>
